added Toast Service + removed changelog on installation

--- a/angular/app/landing/landing.html
+++ b/angular/app/landing/landing.html
@@ -13,7 +13,8 @@
             </md-card-content>
             <div class="md-actions" layout="row" layout-align="end center">
                 <md-button ng-click="showDialog()">Alert Dialog</md-button>
-                <md-button ng-click="toastNotification()">Toast Notification</md-button>
+                <md-button ng-click="toastSuccess()">Toast Success</md-button>
+                <md-button ng-click="toastError()">Toast Error</md-button>
             </div>
         </md-card>
     </div>
