Sidebar fixes - might fix issue #18

--- a/angular/app/sidebar/sidebar.html
+++ b/angular/app/sidebar/sidebar.html
@@ -2,25 +2,25 @@
 	<md-sidenav class="Sidebar md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="true">
 		<md-toolbar class="">
 			<h1 class="md-toolbar-tools Sidebar-title">Laravel 5 angular material starter</h1>
-			<h6 class="Sidebar-version">v 2.3.1</h6>
+			<h6 class="Sidebar-version">v 2.3.2</h6>
 		</md-toolbar>
 		<md-content class="Sidebar-pages md-default-theme">
 			<md-list>
-				<md-list-item ui-sref-active="active" class="Sidebar-page" md-ink-ripple>
-					<div ui-sref="app.landing">Overview</div>
-				</md-list-item>
-				<md-list-item ui-sref-active="active" class="Sidebar-page" md-ink-ripple>
-					<div ui-sref="app.install">Install</div>
-				</md-list-item>
-				<md-list-item ui-sref-active="active" class="Sidebar-page" md-ink-ripple>
-					<div ui-sref="app.tabs">Features</div>
-				</md-list-item>
-				<md-list-item ui-sref-active="active" class="Sidebar-page" md-ink-ripple>
-					<div ui-sref="app.deploy">Deploy</div>
-				</md-list-item>
-				<md-list-item ui-sref-active="active" class="Sidebar-page" md-ink-ripple>
-					<div ui-sref="app.theme">Theme</div>
-				</md-list-item>
+				<div ui-sref-active="active" ui-sref="app.landing" class="Sidebar-page">
+					<md-list-item md-ink-ripple>Overview</md-list-item>
+				</div>
+				<div ui-sref-active="active" ui-sref="app.install" class="Sidebar-page">
+					<md-list-item md-ink-ripple>Install</md-list-item>
+				</div>
+				<div ui-sref-active="active" ui-sref="app.tabs" class="Sidebar-page">
+					<md-list-item md-ink-ripple>Features</md-list-item>
+				</div>
+				<div ui-sref-active="active" ui-sref="app.deploy" class="Sidebar-page">
+					<md-list-item md-ink-ripple>Deploy</md-list-item>
+				</div>
+				<div ui-sref-active="active" ui-sref="app.theme" class="Sidebar-page">
+					<md-list-item md-ink-ripple>Theme</md-list-item>
+				</div>
 			</md-list>
 		</md-content>
 	</md-sidenav>
