--- a/angular/app/sidebar/sidebar.html
+++ b/angular/app/sidebar/sidebar.html
@@ -2,7 +2,7 @@
 	<md-sidenav class="Sidebar md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="true">
 		<md-toolbar class="">
 			<h1 class="md-toolbar-tools Sidebar-title">Laravel 5 angular material starter</h1>
-			<h6 class="Sidebar-version">v 2.6.0</h6>
+			<h6 class="Sidebar-version"><a href="https://github.com/jadjoubran/laravel5-angular-material-starter/releases">version 2</a></h6>
 		</md-toolbar>
 		<md-content class="Sidebar-pages md-default-theme">
 			<md-list>
