--- a/angular/app/sidebar/sidebar.html
+++ b/angular/app/sidebar/sidebar.html
@@ -23,6 +23,9 @@
 				<div ui-sref-active="active" ui-sref="app.theme" class="Sidebar-page">
 					<md-list-item md-ink-ripple>Theme</md-list-item>
 				</div>
+				<div ui-sref-active="active" ui-sref="app.toasts" class="Sidebar-page">
+					<md-list-item md-ink-ripple>Toasts</md-list-item>
+				</div>
 			</md-list>
 		</md-content>
 	</md-sidenav>
