added Dialogs demo page

--- a/angular/app/sidebar/sidebar.html
+++ b/angular/app/sidebar/sidebar.html
@@ -26,6 +26,9 @@
 				<div ui-sref-active="active" ui-sref="app.toasts" class="Sidebar-page">
 					<md-list-item md-ink-ripple>Toasts</md-list-item>
 				</div>
+				<div ui-sref-active="active" ui-sref="app.dialogs" class="Sidebar-page">
+					<md-list-item md-ink-ripple>Dialogs</md-list-item>
+				</div>
 			</md-list>
 		</md-content>
 	</md-sidenav>
