--- a/angular/app/sidebar/sidebar.html
+++ b/angular/app/sidebar/sidebar.html
@@ -23,11 +23,17 @@
 				<div ui-sref-active="active" ui-sref="app.theme" class="Sidebar-page">
 					<md-list-item md-ink-ripple>Theme</md-list-item>
 				</div>
+				<div ui-sref-active="active" ui-sref="app.generators" class="Sidebar-page">
+					<md-list-item md-ink-ripple>Generators</md-list-item>
+				</div>
 				<div ui-sref-active="active" ui-sref="app.toasts" class="Sidebar-page">
 					<md-list-item md-ink-ripple>Toasts</md-list-item>
 				</div>
 				<div ui-sref-active="active" ui-sref="app.dialogs" class="Sidebar-page">
 					<md-list-item md-ink-ripple>Dialogs</md-list-item>
+				</div>
+				<div ui-sref-active="active" ui-sref="app.unsupported_browser" class="Sidebar-page">
+					<md-list-item md-ink-ripple>Unsupported Browser</md-list-item>
 				</div>
 			</md-list>
 		</md-content>
