cleaned up readme

--- a/angular/app/tabs/tabs.html
+++ b/angular/app/tabs/tabs.html
@@ -53,9 +53,7 @@
 				<h1 class="md-display-1">Angular Material</h1>
 
 				<p>
-					Material Design as a UI library! Chosen instead of bootstrap in order to avoid injecting
-					jQuery
-					with Angular.<br>
+					Material Design as a UI library! <br>
 					Here's what you'll get:
 				<ul>
 					<li>Sample Landing and Dashboard pages design with Material Design</li>
