new demo page for elixir

--- a/angular/app/generators/generators.html
+++ b/angular/app/generators/generators.html
@@ -16,7 +16,7 @@ artisan ng:config name    #New config inside angular/config/</code></pre>
 	</section>
 	<div class="PageText">
 		Do <strong>not</strong> append the words Service, Controller or Ctrl.<br>
-		They will be automatically created according to the <a href="" target="_blank">StudlyCase</a> of the name you entered.<br>
-		Use the snake case for more than 1 word: add_users, add_items, edit_data
+		They will be automatically created according to the <a href="laravel.com/docs/5.1/helpers#method-studly-case" target="_blank">StudlyCase</a> of the name you entered.<br>
+		Use the <a href="laravel.com/docs/5.1/helpers#method-snake-case" target="_blank">snake_case</a> for more than 1 word: add_users, add_items, edit_data
 	</div>
 </div>
