new demo page: Rest API

--- a/angular/app/dialogs/dialogs.html
+++ b/angular/app/dialogs/dialogs.html
@@ -12,8 +12,7 @@
 
 //use artisan ng:dialog add_users
 //$scope is optional. You'll be able to use $scope.$parent from within the dialog's controller
-DialogService.fromTemplate('add_users', $scope);
-</code></pre>
+DialogService.fromTemplate('add_users', $scope);</code></pre>
 	</section>
 	<div class="PageText">
 		<a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/angular/services/dialog.js" target="_blank">DialogService</a>
