--- a/angular/app/sidebar/sidebar.html
+++ b/angular/app/sidebar/sidebar.html
@@ -35,6 +35,9 @@
 				<div ui-sref-active="active" ui-sref="app.elixir" class="Sidebar-page">
 					<md-list-item md-ink-ripple>Elixir</md-list-item>
 				</div>
+				<div ui-sref-active="active" ui-sref="app.rest_api" class="Sidebar-page">
+					<md-list-item md-ink-ripple>REST API</md-list-item>
+				</div>
 				<div ui-sref-active="active" ui-sref="app.unsupported_browser" class="Sidebar-page">
 					<md-list-item md-ink-ripple>Unsupported Browser</md-list-item>
 				</div>
