--- a/angular/app/landing/landing.html
+++ b/angular/app/landing/landing.html
@@ -10,6 +10,8 @@
                     This is a starter project that gives you an out of the box configuration for Laravel5 and
                     Angular.<br>
                 </p>
+
+	            <md-button class="md-primary md-raised" ui-sref="app.install">Install</md-button>
             </md-card-content>
         </md-card>
     </div>
