--- a/angular/app/sidebar/sidebar.html
+++ b/angular/app/sidebar/sidebar.html
@@ -41,6 +41,9 @@
 				<div ui-sref-active="active" ui-sref="app.unsupported_browser" class="Sidebar-page">
 					<md-list-item md-ink-ripple>Unsupported Browser</md-list-item>
 				</div>
+				<div ui-sref-active="active" ui-sref="app.misc" class="Sidebar-page">
+					<md-list-item md-ink-ripple>Miscellaneous Features</md-list-item>
+				</div>
 			</md-list>
 		</md-content>
 	</md-sidenav>
