added angular ng:directive generator

--- a/angular/app/generators/generators.html
+++ b/angular/app/generators/generators.html
@@ -8,11 +8,12 @@
 	</md-toolbar>
 
 	<section class="language-markup">
-			<pre><code class="line-numbers language-* language-bash">artisan ng:feature name   #New feature inside angular/app/
-artisan ng:dialog name    #New custom dialog inside angular/dialogs/
-artisan ng:service name   #New service inside angular/services/
-artisan ng:filter name    #New filter inside angular/filters/
-artisan ng:config name    #New config inside angular/config/</code></pre>
+			<pre><code class="line-numbers language-* language-bash">artisan ng:feature name    #New feature inside angular/app/
+artisan ng:dialog name     #New custom dialog inside angular/dialogs/
+artisan ng:directive name  #New directive inside angular/directives/
+artisan ng:service name    #New service inside angular/services/
+artisan ng:filter name     #New filter inside angular/filters/
+artisan ng:config name     #New config inside angular/config/</code></pre>
 	</section>
 	<div class="PageText">
 		Do <strong>not</strong> append the words Service, Controller or Ctrl.<br>
