--- a/angular/app/sidebar/sidebar.html
+++ b/angular/app/sidebar/sidebar.html
@@ -26,6 +26,9 @@
 				<div ui-sref-active="active" ui-sref="app.generators" class="Sidebar-page">
 					<md-list-item md-ink-ripple>Generators</md-list-item>
 				</div>
+				<div ui-sref-active="active" ui-sref="app.jwt_auth" class="Sidebar-page">
+					<md-list-item md-ink-ripple>JWT Auth</md-list-item>
+				</div>
 				<div ui-sref-active="active" ui-sref="app.toasts" class="Sidebar-page">
 					<md-list-item md-ink-ripple>Toasts</md-list-item>
 				</div>
