--- a/angular/app/rest_api/rest_api.html
+++ b/angular/app/rest_api/rest_api.html
@@ -33,6 +33,7 @@ return response()->api($data);</code></pre>
 	<div class="PageText">
 		<a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/app/Providers/ResponseMacroServiceProvider.php" target="_blank">ResponseMacroServiceProvider</a> returns your data inside the <strong>data</strong> object.<br>
 		You can customize it to include other properties.<br>
-		It's also useful to differentiate data from the default Restangular methods.
+		It's also useful to differentiate data from the default Restangular methods.<br>
+		Also route versioning is configured for you inside <a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/app/Http/routes.php" target="_blank">routes.php</a> file and <a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/angular/config/restangular.js" target="_blank">angular/config/restangular.js</a>.
 	</div>
 </div>
