more layout restructuring fixing some of the layout jumping and responsive issues

--- a/angular/app/header/header.html
+++ b/angular/app/header/header.html
@@ -1,7 +1,7 @@
 <div class="md-toolbar-tools">
 	<md-button
 			ng-click="openSideNav()"
-			hide-gt-sm
+			hide-gt-md
 			class="md-icon-button"
 			aria-label="Show Menu">
 		<ng-md-icon icon="menu"></ng-md-icon>
