--- a/angular/app/landing/landing.html
+++ b/angular/app/landing/landing.html
@@ -1,4 +1,4 @@
-<div class="Landing-Container" ng-controller="LandingCtrl">
+<md-content class="Page-Container" ng-controller="LandingCtrl" layout="column" layout-align="start center">
     <md-card>
         <img ng-src="{{promoImage}}" class="md-card-image" alt="Laravel 5 Angular material starter">
         <md-card-content>
@@ -13,4 +13,5 @@
             <md-button class="md-primary md-raised" ui-sref="app.install">Install</md-button>
         </md-card-content>
     </md-card>
-</div>
+</md-content>
+
