--- a/angular/app/rest_api/rest_api.html
+++ b/angular/app/rest_api/rest_api.html
@@ -1,39 +1,56 @@
-<div class="PageContent md-whiteframe-z1" ng-controller="RestApiCtrl">
-	<md-toolbar class="PageToolbar">
-		<div class="md-toolbar-tools">
-			<h2>
-				<span>Restangular</span>
-			</h2>
-		</div>
-	</md-toolbar>
+<md-content class="Page-Container" ng-controller="RestApiCtrl" layout="column" layout-align="start center">
 
-	<section class="language-markup">
-			<pre><code class="line-numbers language-* language-javascript">Restangular.all('data').doGET().then(function(response){
-	//results are returned under data attribute because of the API Response Macro below
-	console.log(response.data);
+    <md-card>
+
+        <md-toolbar>
+            <div class="md-toolbar-tools">
+                <h2>Restangular</h2>
+            </div>
+        </md-toolbar>
+
+        <md-card-content class="language-markup"><pre><code class="line-numbers language-* language-javascript">
+Restangular.all('data').doGET().then(function(response){
+    //results are returned under data attribute because of the API Response Macro below
+    console.log(response.data);
 });</code></pre>
-	</section>
-	<div class="PageText">
-		<a href="https://github.com/mgonto/restangular" target="_blank">Restangular</a> is an AngularJS service to handle Rest API Restful Resources properly and easily
-	</div>
-	<br>
-	<br>
-	<md-toolbar class="PageToolbar">
-		<div class="md-toolbar-tools">
-			<h2>
-				<span>API Response Macro</span>
-			</h2>
-		</div>
-	</md-toolbar>
+        </md-card-content>
 
-	<section class="language-markup">
-			<pre><code class="line-numbers language-* language-php">//return your data using the api response macro
+        <md-card-content>
+            <p>
+                <a href="https://github.com/mgonto/restangular" target="_blank">Restangular</a> is an AngularJS service to handle Rest API Restful Resources properly and easily.
+            </p>
+        </md-card-content>
+
+    </md-card>
+
+    <md-card>
+
+        <md-toolbar>
+            <div class="md-toolbar-tools">
+                <h2>API Response Macro</h2>
+            </div>
+        </md-toolbar>
+
+        <md-card-content class="language-markup"><pre><code class="line-numbers language-* language-php">
+//return your data using the api response macro
 return response()->api($data);</code></pre>
-	</section>
-	<div class="PageText">
-		<a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/app/Providers/ResponseMacroServiceProvider.php" target="_blank">ResponseMacroServiceProvider</a> returns your data inside the <strong>data</strong> object.<br>
-		You can customize it to include other properties.<br>
-		It's also useful to differentiate data from the default Restangular methods.<br>
-		Also route versioning is configured for you inside <a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/app/Http/routes.php" target="_blank">routes.php</a> file and <a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/angular/config/restangular.js" target="_blank">angular/config/restangular.js</a>.
-	</div>
-</div>
+        </md-card-content>
+
+        <md-card-content>
+            <p>
+                <a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/app/Providers/ResponseMacroServiceProvider.php" target="_blank">ResponseMacroServiceProvider</a> returns your data inside the <strong>data</strong> object.<br>
+            </p>
+            <p>
+                You can customize it to include other properties.
+            </p>
+            <p>
+                It's also useful to differentiate data from the default Restangular methods.
+            </p>
+            <p>
+                Also route versioning is configured for you inside <a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/app/Http/routes.php" target="_blank">routes.php</a> file and <a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/angular/config/restangular.js" target="_blank">angular/config/restangular.js</a>.
+            </p>
+        </md-card-content>
+
+    </md-card>
+
+</md-content>
