--- a/angular/app/deploy/deploy.html
+++ b/angular/app/deploy/deploy.html
@@ -1,14 +1,15 @@
-<div class="PageContent md-whiteframe-z1">
-	<md-toolbar class="PageToolbar">
-		<div class="md-toolbar-tools">
-			<h2>
-				<span>deploy.sh</span>
-			</h2>
-		</div>
-	</md-toolbar>
+<md-content class="Page-Container" layout="column" layout-align="start center">
 
-	<section class="language-markup">
-			<pre><code class="line-numbers language-* language-bash">#ssh to your server here
+    <md-card>
+
+        <md-toolbar class="PageToolbar">
+            <div class="md-toolbar-tools">
+                <h2>deploy.sh</h2>
+            </div>
+        </md-toolbar>
+
+        <md-card-content class="language-markup"><pre><code class="line-numbers language-* language-bash">
+#ssh to your server here
 php artisan route:clear
 php artisan config:clear
 git pull
@@ -17,10 +18,17 @@ composer install
 php artisan route:cache
 php artisan config:cache
 php artisan optimize</code></pre>
-	</section>
-	<div class="PageText">
-		<a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/deploy.sh" target="_blank">Deploy.sh</a>
-		is available at the root level of your app.<br>
-		Keep in mind that any configuration/routing change that you make, will not take effect until you clear the cache again.
-	</div>
-</div>
+        </md-card-content>
+
+        <md-card-content>
+            <p>
+                <a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/deploy.sh" target="_blank">Deploy.sh</a>
+                is available at the root level of your app.
+            </p>
+            <p>
+                Keep in mind that any configuration/routing change that you make, will not take effect until you clear the cache again.
+            </p>
+        </md-card-content>
+
+    </md-card>
+</md-content>
