--- a/angular/app/dialogs/dialogs.html
+++ b/angular/app/dialogs/dialogs.html
@@ -1,24 +1,32 @@
-<div class="PageContent md-whiteframe-z1" ng-controller="DialogsCtrl">
-	<md-toolbar class="PageToolbar">
-		<div class="md-toolbar-tools">
-			<h2>
-				<span>DialogService</span>
-			</h2>
-		</div>
-	</md-toolbar>
+<md-content class="Page-Container" ng-controller="DialogsCtrl" layout="column" layout-align="start center">
 
-	<section class="language-markup">
-			<pre><code class="line-numbers language-* language-javascript">DialogService.alert('This is an alert title', 'You can specify some description text in here.');
+    <md-card>
+
+        <md-toolbar>
+            <div class="md-toolbar-tools">
+                <h2>DialogService</h2>
+            </div>
+        </md-toolbar>
+
+        <md-card-content class="language-markup"><pre><code class="line-numbers language-* language-javascript">
+DialogService.alert('This is an alert title', 'You can specify some description text in here.');
 
 //use artisan ng:dialog add_users
 //$scope is optional. You'll be able to use $scope.$parent from within the dialog's controller
 DialogService.fromTemplate('add_users', $scope);</code></pre>
-	</section>
-	<div class="PageText">
-		<a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/angular/services/dialog.js" target="_blank">DialogService</a>
-		can be extended to suit your needs.<br>
-		<br>
-		<md-button ng-click="alertDialog()">Alert Dialog</md-button>
-		<md-button ng-click="customDialog()">Custom Dialog</md-button>
-	</div>
-</div>
+        </md-card-content>
+
+        <md-card-content>
+            <p>
+                <a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/angular/services/dialog.js" target="_blank">DialogService</a>
+                can be extended to suit your needs.
+            </p>
+            <div layout="row" layout-align="start center">
+                <md-button ng-click="alertDialog()">Alert Dialog</md-button>
+                <md-button ng-click="customDialog()">Custom Dialog</md-button>
+            </div>
+        </md-card-content>
+
+    </md-card>
+
+</md-content>
