--- a/angular/app/misc/misc.html
+++ b/angular/app/misc/misc.html
@@ -1,57 +1,61 @@
-<div class="PageContent" ng-controller="MiscCtrl">
-	<div class="md-whiteframe-z1">
-		<md-toolbar class="PageToolbar">
-			<div class="md-toolbar-tools">
-				<h2>
-					<span>Debugbar</span>
-				</h2>
-			</div>
-		</md-toolbar>
+<md-content class="Page-Container" ng-controller="MiscCtrl" layout="column" layout-align="start center">
 
-		<div class="u-center">
-			<img src="https://cloud.githubusercontent.com/assets/973269/4270452/740c8c8c-3ccb-11e4-8d9a-5a9e64f19351.png" width="100%" alt="Debugbar screenshot">
-		</div>
+    <md-card>
 
-		<div class="PageText">
-			<a href="https://github.com/barryvdh/laravel-debugbar" target="_blank">Debugbar</a> allows you to easily debug your app.<br>
-			You can debug pretty much everything: queries, routes, messages, mails, views, etc..
-		</div>
-	</div>
-	<br>
-	<div class="md-whiteframe-z1">
-		<md-toolbar class="PageToolbar">
-			<div class="md-toolbar-tools">
-				<h2>
-					<span>Angular Loading Bar</span>
-				</h2>
-			</div>
-		</md-toolbar>
+        <md-toolbar>
+            <div class="md-toolbar-tools">
+                <h2>Debugbar</h2>
+            </div>
+        </md-toolbar>
 
-		<div class="PageText">
-			<a href="http://chieffancypants.github.io/angular-loading-bar/" target="_blank">Angular Loading Bar</a> is that loading bar that you see on top when you navigate between routes.
-		</div>
-	</div>
-	<br>
-	<div class="md-whiteframe-z1">
-		<md-toolbar class="PageToolbar">
-			<div class="md-toolbar-tools">
-				<h2>
-					<span>Angular Filters</span>
-				</h2>
-			</div>
-		</md-toolbar>
+        <img src="https://cloud.githubusercontent.com/assets/973269/4270452/740c8c8c-3ccb-11e4-8d9a-5a9e64f19351.png" width="100%" alt="Debugbar screenshot">
+        <md-card-content>
+            <p>
+                <a href="https://github.com/barryvdh/laravel-debugbar" target="_blank">Debugbar</a> allows you to easily debug your app.
+            </p>
+            <p>
+                You can debug pretty much everything: queries, routes, messages, mails, views, etc..
+            </p>
+        </md-card-content>
 
-		<div class="PageText">
-			Laravel5-angular-material-starter comes with some useful angular filters:
-			<ul>
-				<li><a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/angular/filters/capitalize.js" target="_blank">Capitalize</a></li>
-				<li><a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/angular/filters/human_readable.js" target="_blank">humanReadable</a></li>
-				<li><a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/angular/filters/trust_html.js" target="_blank">trust_html</a></li>
-				<li><a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/angular/filters/ucfirst.js" target="_blank">ucfirst</a></li>
-			</ul>
-		</div>
-	</div>
-	<br>
-	<br>
+    </md-card>
 
-</div>
+    <md-card>
+
+        <md-toolbar>
+            <div class="md-toolbar-tools">
+                <h2>Angular Loading Bar</h2>
+            </div>
+        </md-toolbar>
+
+        <md-card-content>
+            <p>
+                <a href="http://chieffancypants.github.io/angular-loading-bar/" target="_blank">Angular Loading Bar</a> is that loading bar that you see on top when you navigate between routes.
+            </p>
+        </md-card-content>
+
+    </md-card>
+
+    <md-card>
+
+        <md-toolbar>
+            <div class="md-toolbar-tools">
+                <h2>Angular Filters</h2>
+            </div>
+        </md-toolbar>
+
+        <md-card-content>
+            <p>
+                Laravel5-angular-material-starter comes with some useful angular filters:
+            </p>
+            <ul>
+                <li><a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/angular/filters/capitalize.js" target="_blank">Capitalize</a></li>
+                <li><a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/angular/filters/human_readable.js" target="_blank">humanReadable</a></li>
+                <li><a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/angular/filters/trust_html.js" target="_blank">trust_html</a></li>
+                <li><a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/angular/filters/ucfirst.js" target="_blank">ucfirst</a></li>
+            </ul>
+        </md-card-content>
+
+    </md-card>
+
+</md-content>
