--- a/angular/app/tabs/tabs.html
+++ b/angular/app/tabs/tabs.html
@@ -1,68 +1,83 @@
-<div ng-controller="DashboardCtrl" class="Dashboard-Container">
-	<md-tabs md-dynamic-height md-border-bottom>
-		<md-tab label="Laravel 5">
-			<md-content class="md-padding">
-				<h1 class="md-display-1">Laravel 5</h1>
+<md-content class="Page-Container" ng-controller="DashboardCtrl" layout="column" layout-align="start center">
 
-				<p>
-					The Laravel 5.1 that you loved, comes pre-configured to run with AngularJS:<br>
-				<ul>
-					<li>JWT Authentication</li>
-					<li>A view (resources/index.blade.php) that loads all the assets you need (CSS and JS) &amp;
-						sets up angular ui-router
-					</li>
-					<li>Support for CSRF token when using the API</li>
-					<li><a href="https://github.com/barryvdh/laravel-debugbar" target="_blank">Debugbar</a> for
-						Laravel 5: It's that bar you see at the bottom. Very useful for debugging the API
-					</li>
-					<li>Sample API endpoints</li>
-					<li>Elixir configuration for Angular, jshint, bower and views.</li>
-					<li>Optimized deployment script.</li>
-					<li>API response macro</li>
-				</ul>
-				</p>
-			</md-content>
-		</md-tab>
-		<md-tab label="AngularJS">
-			<md-content class="md-padding">
-				<h1 class="md-display-1">AngularJS</h1>
+    <md-card>
 
-				<p>
-					AngularJS comes ready to communicate with the Laravel 5 API that you're building. It
-					actually
-					comes with a few sample API endpoints!<br>
-					This is what you have out of the box:
-				<ul>
-					<li>A flexible and powerful router for Angular: <a
-							href="https://github.com/angular-ui/ui-router" target="_blank">ui-router</a></li>
-					<li><a href="https://github.com/mgonto/restangular" target="_blank">Restangular</a> makes
-						communicating with the API a breeze!
-					</li>
-					<li>Support for CSRF token via Restangular</li>
-					<!-- <li>Sample API calls</li> -->
-					<li>Sample UI router with multiple views (main &amp; footer)</li>
-					<li>UI Router sample authentication</li>
-					<li>ngstorage module which simplifies access to localStorage.. The Angular way!</li>
-					<li>Angular Material Icons with SVG morpheus</li>
-				</ul>
-				</p>
-			</md-content>
-		</md-tab>
-		<md-tab label="Angular Material">
-			<md-content class="md-padding">
-				<h1 class="md-display-1">Angular Material</h1>
+        <md-card-content>
+            <md-tabs md-dynamic-height md-border-bottom>
+                <md-tab label="Laravel 5">
+                    <md-content class="md-padding">
+                        <h1 class="md-display-1">Laravel 5</h1>
 
-				<p>
-					Material Design as a UI library! <br>
-					Here's what you'll get:
-				<ul>
-					<li>Sample Landing and Dashboard pages design with Material Design</li>
-					<li>Custom Material Design theme so that you can easily create your own theme</li>
-					<li>Sample Dialog, Toast notifications &amp; Tabs</li>
-					<li>More coming soon!</li>
-				</ul>
-				</p>
-			</md-content>
-		</md-tab>
-	</md-tabs>
-</div>
+                        <p>
+                            The Laravel 5.1 that you loved, comes pre-configured to run with AngularJS:
+                        </p>
+                        <ul>
+                            <li>JWT Authentication</li>
+                            <li>A view (resources/index.blade.php) that loads all the assets you need (CSS and JS) &amp;
+                                sets up angular ui-router
+                            </li>
+                            <li>Support for CSRF token when using the API</li>
+                            <li><a href="https://github.com/barryvdh/laravel-debugbar" target="_blank">Debugbar</a> for
+                                Laravel 5: It's that bar you see at the bottom. Very useful for debugging the API
+                            </li>
+                            <li>Sample API endpoints</li>
+                            <li>Elixir configuration for Angular, jshint, bower and views.</li>
+                            <li>Optimized deployment script.</li>
+                            <li>API response macro</li>
+                        </ul>
+
+                    </md-content>
+                </md-tab>
+                <md-tab label="AngularJS">
+                    <md-content class="md-padding">
+                        <h1 class="md-display-1">AngularJS</h1>
+
+                        <p>
+                            AngularJS comes ready to communicate with the Laravel 5 API that you're building. It
+                            actually
+                            comes with a few sample API endpoints!
+                        </p>
+                        <p>
+                            This is what you have out of the box:
+                        </p>
+                        <ul>
+                            <li>A flexible and powerful router for Angular: <a
+                                    href="https://github.com/angular-ui/ui-router" target="_blank">ui-router</a></li>
+                            <li><a href="https://github.com/mgonto/restangular" target="_blank">Restangular</a> makes
+                                communicating with the API a breeze!
+                            </li>
+                            <li>Support for CSRF token via Restangular</li>
+                            <!-- <li>Sample API calls</li> -->
+                            <li>Sample UI router with multiple views (main &amp; footer)</li>
+                            <li>UI Router sample authentication</li>
+                            <li>ngstorage module which simplifies access to localStorage.. The Angular way!</li>
+                            <li>Angular Material Icons with SVG morpheus</li>
+                        </ul>
+
+                    </md-content>
+                </md-tab>
+                <md-tab label="Angular Material">
+                    <md-content class="md-padding">
+                        <h1 class="md-display-1">Angular Material</h1>
+
+                        <p>
+                            Material Design as a UI library!
+                        </p>
+                        <p>
+                            Here's what you'll get:
+                        </p>
+                        <ul>
+                            <li>Sample Landing and Dashboard pages design with Material Design</li>
+                            <li>Custom Material Design theme so that you can easily create your own theme</li>
+                            <li>Sample Dialog, Toast notifications &amp; Tabs</li>
+                            <li>More coming soon!</li>
+                        </ul>
+
+                    </md-content>
+                </md-tab>
+            </md-tabs>
+        </md-card-content>
+
+    </md-card>
+
+</md-content>
