--- a/angular/app/unsupported_browser/unsupported_browser.html
+++ b/angular/app/unsupported_browser/unsupported_browser.html
@@ -1,18 +1,23 @@
-<div class="PageContent md-whiteframe-z1" ng-controller="UnsupportedBrowserCtrl">
-	<md-toolbar class="PageToolbar">
-		<div class="md-toolbar-tools">
-			<h2>
-				<span>Unsupported Browser Page</span>
-			</h2>
-		</div>
-	</md-toolbar>
+<md-content class="Page-Container" ng-controller="UnsupportedBrowserCtrl" layout="column" layout-align="start center">
 
-	<div class="u-center">
-		<img src="https://i.imgur.com/5sRuLSo.png" alt="Unsupported Browser Page for IE <= 10">
-	</div>
+    <md-card>
 
-	<div class="PageText">
-		Open <a href="/unsupported-browser" target="_blank">/unsupported-browser</a> to see the unsupported browser page that shows for Internet Explorer 10 or below.<br>
-		This is necessary because Angular Material uses the newest features in CSS (such as flexbox or its layout).
-	</div>
-</div>
+        <md-toolbar>
+            <div class="md-toolbar-tools">
+                <h2>Unsupported Browser Page</h2>
+            </div>
+        </md-toolbar>
+
+        <img src="https://i.imgur.com/5sRuLSo.png" alt="Unsupported Browser Page for IE <= 10">
+        <md-card-content>
+            <p>
+                Open <a href="/unsupported-browser" target="_blank">/unsupported-browser</a> to see the unsupported browser page that shows for Internet Explorer 10 or below.
+            </p>
+            <p>
+                This is necessary because Angular Material uses the newest features in CSS (such as flexbox or its layout).
+            </p>
+        </md-card-content>
+
+    </md-card>
+
+</md-content>
