done with dingo/api documentation

--- a/angular/app/jwt_auth/jwt_auth.html
+++ b/angular/app/jwt_auth/jwt_auth.html
@@ -23,7 +23,7 @@
 
         <md-card-content>
             <p>
-                Check the <a href="https://github.com/jadjoubran/laravel5-angular-material-starter/blob/master/app/Http/Controllers/AuthenticateController.php" target="_blank">AuthenticateController</a> for more info.
+            	JWT-auth is configured to work out of the box with dingo/api. Checkout the <a ui-sref="app.rest_api">REST API</a> docs.
             </p>
             <!--<p>
                 <md-button ng-click="requestToken()">Request Token</md-button>
