updated docs for windows + vagrant users - closes #61, #66

--- a/angular/app/install/install.html
+++ b/angular/app/install/install.html
@@ -8,6 +8,10 @@
 			</div>
 		</md-toolbar>
 
+		<md-card-content>
+		<u>Heads up for Windows + Vagrant users:</u> You need to follow the steps in <a href="https://github.com/jadjoubran/laravel5-angular-material-starter/issues/61#issuecomment-145564131" target="_blank">issue #61</a>
+		</md-card-content>
+
 		<md-card-content class="language-markup"><pre><code class="line-numbers language-* language-bash">
 composer create-project jadjoubran/laravel5-angular-material-starter --prefer-dist
 cd laravel5-angular-material-starter
