--- a/angular/app/dialogs/dialogs.html
+++ b/angular/app/dialogs/dialogs.html
@@ -11,6 +11,8 @@
         <md-card-content class="language-markup"><pre><code class="line-numbers language-* language-javascript">
 DialogService.alert('This is an alert title', 'You can specify some description text in here.');
 
+DialogService.confirm('This is a confirm title', 'Are you sure you want to do this?')
+
 //use artisan ng:dialog add_users
 //$scope is optional. You'll be able to use $scope.$parent from within the dialog's controller
 DialogService.fromTemplate('add_users', $scope);</code></pre>
@@ -23,6 +25,7 @@ DialogService.fromTemplate('add_users', $scope);</code></pre>
             </p>
             <div layout="row" layout-align="start center">
                 <md-button ng-click="alertDialog()">Alert Dialog</md-button>
+                <md-button ng-click="confirmDialog()">Confirm Dialog</md-button>
                 <md-button ng-click="customDialog()">Custom Dialog</md-button>
             </div>
         </md-card-content>
