--- a/angular/app/dialogs/dialogs.html
+++ b/angular/app/dialogs/dialogs.html
@@ -16,7 +16,7 @@ DialogService.confirm('This is a confirm title', 'Are you sure you want to do th
 		console.log ('Success');
 	},
 	function (){
-		console.error('Cancel');
+		console.log('Cancel');
 	}
 );
 
