Add links for associated resources to help with understanding of functionality

--- a/angular/app/tabs/tabs.html
+++ b/angular/app/tabs/tabs.html
@@ -49,8 +49,8 @@
                             <!-- <li>Sample API calls</li> -->
                             <li>Sample UI router with multiple views (main &amp; footer)</li>
                             <li>UI Router sample authentication</li>
-                            <li>ngstorage module which simplifies access to localStorage.. The Angular way!</li>
-                            <li>Angular Material Icons with SVG morpheus</li>
+                            <li><a href="https://github.com/gsklee/ngStorage">ngStorage</a> module which simplifies access to localStorage.. The Angular way!</li>
+                            <li><a href="https://klarsys.github.io/angular-material-icons/">Angular Material Icons</a> with <a href="https://alexk111.github.io/SVG-Morpheus/">SVG morpheus</a></li>
                         </ul>
 
                     </md-content>
