out of the box configuration for laravel-cors. closes #69

--- a/angular/app/misc/misc.html
+++ b/angular/app/misc/misc.html
@@ -24,6 +24,22 @@
 
         <md-toolbar>
             <div class="md-toolbar-tools">
+                <h2>Cross Origin Resource Sharing (CORS)</h2>
+            </div>
+        </md-toolbar>
+
+        <md-card-content>
+            <p>
+                <a href="https://github.com/barryvdh/laravel-cors" target="_blank">Laravel-cors</a> works out of the box. All API endpoints return the allow-access-origin header. The <strong>cors</strong> middleware is enabled in the global middlewares in app\Http\kernel.php.
+            </p>
+        </md-card-content>
+
+    </md-card>
+
+    <md-card>
+
+        <md-toolbar>
+            <div class="md-toolbar-tools">
                 <h2>Angular Loading Bar</h2>
             </div>
         </md-toolbar>
