--- a/angular/app/jwt_auth/jwt_auth.html
+++ b/angular/app/jwt_auth/jwt_auth.html
@@ -15,7 +15,7 @@
     angular.module('app.config').config(function ($authProvider){
         // Satellizer configuration that specifies which API
         // route the JWT should be retrieved from
-        $authProvider.loginUrl = '/api/1/authenticate/auth';
+        //$authProvider.loginUrl = '/api/1/authenticate/auth';
     });
 
 })();</code></pre>
