added response macros for API success & error + fixed dingo/api validation response format #94

--- a/angular/app/rest_api/rest_api.html
+++ b/angular/app/rest_api/rest_api.html
@@ -56,7 +56,7 @@ Restangular.all('data').doGET().then(function(response){
 
         <md-card-content class="language-markup"><pre><code class="line-numbers language-* language-php">
 //return your data using the api response macro
-return response()->api($data);</code></pre>
+return response()->success($data);</code></pre>
         </md-card-content>
 
         <md-card-content>
