API Restangular Service + error interceptor inline with Laravel validation errors #96

--- a/angular/app/rest_api/rest_api.html
+++ b/angular/app/rest_api/rest_api.html
@@ -33,7 +33,7 @@ $api->version('v1', function ($api) {
         </md-toolbar>
 
         <md-card-content class="language-markup"><pre><code class="line-numbers language-* language-javascript">
-Restangular.all('data').doGET().then(function(response){
+API.all('data').doGET().then(function(response){
     console.log(response.data);
 });</code></pre>
         </md-card-content>
