Out of the box JWT setup + interactive Tutorial #41

--- a/angular/app/rest_api/rest_api.html
+++ b/angular/app/rest_api/rest_api.html
@@ -8,7 +8,7 @@
             </div>
         </md-toolbar>
 
-        <md-card-content class="language-markup"><pre><code class="line-numbers language-* language-javascript">
+        <md-card-content class="language-markup"><pre><code class="line-numbers language-* language-php">
 $api->version('v1', function ($api) {
     $api->get('data', 'App\Http\Controllers\WelcomeController@getSample');
 });</code></pre>
